# cmake-project-template

./: .clang-format  CMakeLists.txt  README.md
cmake/: include_directories.cmake  source_files.cmake
src/: CMakeLists.txt  main.c
src/example1/: example1.c  example1.h
src/example2/: example2.c  example2.h
src/logging/: logging.h  logging_groups.h
tests/example1/: CMakeLists.txt  test_example1.c  test_example1_runner.c
tests/example2/: CMakeLists.txt  test_example2.c  test_example2_runner.c
